--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -69,7 +69,7 @@
 .search:hover > .search-txt{
     /* width: 900px; */
     padding: 0 10px;
-    color: #28c735;
+    color: #1f25e7;
     font-family: 'Pangolin', cursive;
 }
 /* .search:hover > .search-btn{
