--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -37,20 +37,20 @@
             <ul class="footer-links footer-blog-entry list-unstyled">
               <li>
                 <a href="" class="d-flex align-items-center">
-                  <img src="/images/post-sq-3.jpg" alt="" class="img-fluid me-3">
+                  <img src="/images/blue.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <span>5 Great Startup Tips for Female Founders</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                 </a>
               </li>
 
               <li>
                 <a href="" class="d-flex align-items-center">
-                  <img src="/images/post-sq-3.jpg" alt="" class="img-fluid me-3">
+                  <img src="/images/blue.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <span>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                 </a>
               </li>
