--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
         <link href="/css/main.css" rel="stylesheet">
         <link href="/css/form.css" rel="stylesheet">
         <link href="/css/list.css" rel="stylesheet">
+        <link href="/css/file.css" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
@@ -80,7 +81,13 @@
       
         <!-- Template Main JS File -->
         <script src="/js/main.js"></script>
+        <!-- JAVASCRIPT -->
         <script src="/js/project.js"></script>
+        <script src="/js/file.js"></script>
+        <script src="/js/csv_js_file.js"></script>
+        <script src="/js/csv_js_home.js"></script>
+        
+        <script type="text/javascript" src="/js/csv_file_viewer.js"></script>
         
     </body>
 </html>
