--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -34,7 +34,7 @@
     border: none;
     border-radius: 1rem;
     padding: 1.5%;
-    background: #f1882e;
+    background: #20a4f1;
     font-weight: 600;
     color: #fff;
     cursor: pointer;
