--- a/views/csv_home.ejs
+++ b/views/csv_home.ejs
@@ -31,38 +31,33 @@
       </div>
     </section><!-- End Hero Slider Section -->
 
-    <!-- ======= Project Create Start ======= -->
+    <!-- ======= CSV File  Create Start ======= -->
     <section>
-        <div class="container contact-form">
+        <div class="container contact-form" style=" margin-top: 22px;">
             <form method="POST" action="/csv_upload/upload" id="new-project-form1" enctype="multipart/form-data">
-                <h3>Create Project</h3>
-               <div class="row">
+                <h3>CSV Upload</h3>
+               <div class="row" style="    background-color: #cacbe7;">
                     <div class="col-md-6">
                         <div class="form-group">
                             <input type="file" id="csvFile" name="file" accept=".csv">
                         </div>
                         
-
+                        <p style="width: 1118px;">validation for selecting only csv files given here</p>
                         <div class="form-group" style="margin: 0px 0px 14px 0px;">
                             <input type="submit" name="btnSubmit" class="btnContact" value="ADD CSV FILE" />
                         </div>
                     </div>
-                    <!-- <div class="col-md-6">
-                        <div class="form-group">
-                            <textarea name="description" class="form-control" placeholder="Your Description *" style="width: 100%; height: 75px;" required></textarea>
-                        </div>
-                    </div> -->
                 </div>
             </form>
         </div>
     </section>
-    <!-- Project Create End  -->
+    <!-- CSV File  Create End  -->
 
-    <!-- ======= Project List Start ======= -->
+    <!-- ======= CSV File List Start ======= -->
     <section id="posts" class="posts">
-        <h2 style="margin-left: 70px; text-align: center;">Projects List </h2>
+        <h2 style="margin-left: 70px; text-align: center;">CSV List </h2>
       <div class="container" data-aos="fade-up">
-        <div class="row g-5">
+        <div class="row g-5" style="width: 1118px;">
    
           <div class="col-lg-12">
             <div class="row" id="projects-list-container">
@@ -98,7 +93,7 @@
         </div> <!-- End .row -->
       </div>
     </section> 
-    <!-- Project List End  -->
+    <!-- CSV File  List End  -->
 
     
 
