--- a/views/file.ejs
+++ b/views/file.ejs
@@ -86,6 +86,7 @@
                                     </a>
                                 </div>
                                 <!-- heading ends  -->
+                                <h6>sorting for each column based ascending and descending order by clicking each header </h6>
                             
 
                                 <!-- serarch box starts  -->
@@ -158,41 +159,7 @@
                             
                             
                                 </div>
-                                <!-- Pagination starts-->
-                                <!-- <nav id="pagingNav" aria-label="Page navigation example">
-                                    <ul class="pagination">
-                                        <li class="page-item"><a class="page-link" href="/csv_upload/details/?file_id=<%= file._id %>&page=1">First</a></li>
-                                        <li class="page-item">
-                                            <%if(page!=1){%>
-                                                <a class="page-link" href="/csv_upload/details/?file_id=<%= file._id %>&page=<%=page-1%>">
-                                                    <%=page-1%>
-                                                </a>
-                                                <%}%>
-                                        </li>
-                                        <li class="page-item "><a class="page-link active-page">
-                                                <%=page%>
-                                            </a></li>
-
-
-                                        <li class="page-item">
-                                            <%if(page!=totalPages){%>
-                                                <a class="page-link" href="/csv_upload/details/?file_id=<%= file._id %>&page=<%=++page%>">
-                                                    <%=page%>
-                                                </a>
-                                                <%}%>
-                                        </li>
-
-                                        <li class="page-item">
-
-                                            <a class="page-link" href="/csv_upload/details/?file_id=<%= file._id %>&page=<%=totalPages%>">
-                                                Last
-                                            </a>
-
-                                        </li>
-
-                                    </ul>
-                                </nav> -->
-                                <!-- Pagination ends-->
+                                
                             </div>
                             <!-- CSV data ends-->
                         </div>
@@ -242,4 +209,3 @@
 
 
 <!-- External JavaScript -->
-<script src="/js/file.js"></script>
