--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,7 +83,7 @@
         <script src="/js/main.js"></script>
         <!-- JAVASCRIPT -->
         <script src="/js/project.js"></script>
-        <script src="/js/file.js"></script>
+        <!-- <script src="/js/file.js"></script> -->
         <script src="/js/csv_js_file.js"></script>
         <script src="/js/csv_js_home.js"></script>
         
